--- a/index.html
+++ b/index.html
@@ -16,20 +16,20 @@
 <body>
     <div class="container">
         <div class="row">
-            <div class="col">
-                <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="col col-sm-12">
+                <!-- Navbar -->
+                <nav class="navbar navbar-expand-lg bg-body-tertiary w-100 ">
                     <div class="container-fluid">
-                        <a class="navbar-brand mx-1" href="#"><img src="./capstone_colmar_assets/images/ic-logo.svg">
+                        <a class="navbar-brand" href="#"><img src="./capstone_colmar_assets/images/ic-logo.svg">
                         </a>
-                        <p class="text-dark fw-bold d-inline">COLMAR</p>
-                        <p> ACADEMY</p>
+                        <p class="text-dark fw-bold">COLMAR ACADEMY</p>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                             data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
                             aria-expanded="false" aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
                         </button>
                         <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarNavAltMarkup">
-                            <div class="navbar-nav">
+                            <div class="navbar-nav p-1">
                                 <a class="nav-link " aria-current="page" href="#">On campus</a>
                                 <a class="nav-link" href="#">Online</a>
                                 <a class="nav-link" href="#">or companies</a>
@@ -40,8 +40,45 @@
                 </nav>
             </div>
         </div>
+        <!-- p1 -->
+        <div class="card mb-3 w-100" style="background-color: rgb(182, 180, 180);">
+            <div class="row g-0">
+                <div class="col-md-7">
+                    <img src="./capstone_colmar_assets/images/banner.jpg" class="img-fluid rounded-start px-3 py-3"
+                        alt="...">
+                </div>
+                <div class="col-md-5">
+                    <div class="card-body text-center">
+                        <h5 class="card-title ">Lean something new everday</h5>
+                        <p class="card-text">Lorme ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                        <div class="button p-3 mb-2 bg-secondary text-white""">Start Here</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- p2 -->
+        <div class="row">
+            <div class="col">
+
+            </div>
+        </div>
+        <!-- p3 -->
+        <div class="row">
+            <div class="col">
+
+            </div>
+        </div>
+        <!-- p4 -->
+        <div class="row">
+            <div class="col">
+
+            </div>
+        </div>
     </div>
 
 </body>
+<footer class="py-3 my-4">
+    <p class="text-center text-muted">© 2016 Colmar Academy. All rights reseed</p>
+</footer>
 
 </html>
