--- a/index.html
+++ b/index.html
@@ -14,67 +14,172 @@
 </head>
 
 <body>
-    <div class="container">
-        <div class="row">
-            <div class="col col-sm-12">
-                <!-- Navbar -->
-                <nav class="navbar navbar-expand-lg bg-body-tertiary w-100 ">
-                    <div class="container-fluid">
-                        <a class="navbar-brand" href="#"><img src="./capstone_colmar_assets/images/ic-logo.svg">
-                        </a>
-                        <p class="text-dark fw-bold">COLMAR ACADEMY</p>
-                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
-                            aria-expanded="false" aria-label="Toggle navigation">
-                            <span class="navbar-toggler-icon"></span>
-                        </button>
-                        <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarNavAltMarkup">
-                            <div class="navbar-nav p-1">
-                                <a class="nav-link " aria-current="page" href="#">On campus</a>
-                                <a class="nav-link" href="#">Online</a>
-                                <a class="nav-link" href="#">or companies</a>
-                                <a class="nav-link " href="#">Sign in</a>
-                            </div>
+    <div class="row">
+        <div class="col">
+            <!-- Navbar -->
+            <nav class="navbar navbar-expand-lg bg-body-tertiary w-100 ">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="#"><img src="./capstone_colmar_assets/images/ic-logo.svg">
+                    </a>
+                    <p class="text-dark fw-bold">COLMAR ACADEMY</p>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                        aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarNavAltMarkup">
+                        <div class="navbar-nav p-1">
+                            <a class="nav-link " aria-current="page" href="#">On campus</a>
+                            <a class="nav-link" href="#">Online</a>
+                            <a class="nav-link" href="#">or companies</a>
+                            <a class="nav-link " href="#">Sign in</a>
                         </div>
                     </div>
-                </nav>
-            </div>
-        </div>
-        <!-- p1 -->
-        <div class="card mb-3 w-100" style="background-color: rgb(182, 180, 180);">
-            <div class="row g-0">
-                <div class="col-md-7">
-                    <img src="./capstone_colmar_assets/images/banner.jpg" class="img-fluid rounded-start px-3 py-3"
-                        alt="...">
                 </div>
-                <div class="col-md-5">
-                    <div class="card-body text-center">
-                        <h5 class="card-title ">Lean something new everday</h5>
-                        <p class="card-text">Lorme ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                        <div class="button p-3 mb-2 bg-secondary text-white""">Start Here</div>
-                    </div>
+            </nav>
+        </div>
+    </div>
+    <!-- p1 -->
+    <div class="card  w-100 p-4" style="background-color: rgb(182, 180, 180);">
+        <div class="row g-0">
+            <div class="col-md-7">
+                <img src="./capstone_colmar_assets/images/banner.jpg" class="img-fluid rounded-start" alt="...">
+            </div>
+            <div class="col-md-5">
+                <div class="card-body text-center">
+                    <h5 class="card-title ">Lean something new everday</h5>
+                    <p class="card-text">Lorme ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <div class="button p-3 mb-2 bg-secondary text-white""">Start Here</div>
                 </div>
-            </div>
-        </div>
-        <!-- p2 -->
-        <div class="row">
-            <div class="col">
-
-            </div>
-        </div>
-        <!-- p3 -->
-        <div class="row">
-            <div class="col">
-
-            </div>
-        </div>
-        <!-- p4 -->
-        <div class="row">
-            <div class="col">
-
             </div>
         </div>
     </div>
+    <!-- p2 -->
+    <div class="row">
+        <div class="card p-3 mb-3 col-md-7 d-none d-sm-table-cell">
+            <img src="./capstone_colmar_assets/images/information-main.jpg" class="card-img-to w-100">
+            <div class="card-body">
+                <h1 class="card-title fw-bold">It doesn't hurt to keep practicing</h1>
+                <p class="card-text">"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo
+                    lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget
+                    magna laoreet, efficitur dolor consequat, tristique ligula."</p>
+                <p class="card-text"><small class="text-muted">Emanuel, Sr Strategist at Hiring.com</small></p>
+            </div>
+        </div>
+        <!-- 3picture flex -->
+        <div class=" card d-flex flex-column col-md-5 mb-3 p-4">
+            <div class="col-md-2">
+                <img src="./capstone_colmar_assets/images/information-orientation.jpg" class="img-fluid rounded-start"
+                    alt="...">
+            </div>
+            <div class="col-md-3">
+                <div class="card-body text-center">
+                    <h5 class="card-title">Orientaion date</h5>
+                    <p class="card-text">Tue 10/11 & Wed 10/12: 8am-3pm</p>
+                    <p class="card-text"><a href="#" class="text-decoration-none">Read more</a></p>
+                </div>
+            </div>
+            <div class="col-md-2">
+                <img src="./capstone_colmar_assets/images/information-campus.jpg" class="img-fluid rounded-start"
+                    alt="...">
+            </div>
+            <div class="col-md-3">
+                <div class="card-body">
+                    <h5 class="card-title">Our campus</h5>
+                    <p class="card-text">Find which campus is close by you</p>
+                    <p class="card-text"><a href="#" class="text-decoration-none">Read more</a></p>
+                </div>
+            </div>
+            <div class="col-md-2">
+                <img src="./capstone_colmar_assets/images/information-guest-lecture.jpg" class="img-fluid rounded-start"
+                    alt="...">
+            </div>
+            <div class="col-md-3">
+                <div class="card-body">
+                    <h5 class="card-title">Our guest lecture</h5>
+                    <p class="card-text">Jion a keynote with Oliver Sack about music in meddical treatment</p>
+                    <p class="card-text"><a href="#" class="text-decoration-none">Read more</a></p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- p3 -->
+    <div class="Strat learnin w-100" style="background-color: rgb(182, 180, 180);">
+        <div class="row">
+            <div class="col p-3 mb-3">
+                <h2 class="display-4 text-center ">Strat learning</h2>
+            </div>
+        </div>
+        <!-- 6 learning type -->
+        <!-- <div class="d-flex justify-content-evenly"></div> -->
+        <div class="row">
+            <div class="col col-md-4 col-lg-4">
+                <!-- First card goes here -->
+                <div class="card border-0 text-center justify-content-center  mx-auto my-2" style="width: 18rem;">
+                    <img src="./capstone_colmar_assets/images/course-software.jpg"
+                        class="card-img-top d-none d-sm-table-cell" alt="..." />
+                    <div class="card-body">
+                        <p class="card-text">Software engineering</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col col-md-4 col-lg-4">
+                <!-- second card goes here -->
+                <div class="card border-0 text-center justify-content-center  mx-auto my-2" style="width: 18rem;">
+                    <img src="./capstone_colmar_assets/images/course-computer-art.jpg"
+                        class="card-img-top d-none d-sm-table-cell" alt="..." />
+                    <div class="card-body">
+                        <p class="card-text">Computer art</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col col-md-4 col-lg-4">
+                <!-- third card goes here -->
+                <div class="card border-0 text-center justify-content-center  mx-auto my-2" style="width: 18rem;">
+                    <img src="./capstone_colmar_assets/images/course-design.jpg"
+                        class="card-img-top d-none d-sm-table-cell" alt="..." />
+                    <div class="card-body">
+                        <p class="card-text">Design</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="row">
+            <div class="col col-md-4 col-lg-4">
+                <!-- fourth card goes here -->
+                <div class="card border-0 text-center justify-content-center  mx-auto my-2" style="width: 18rem;">
+                    <img src="./capstone_colmar_assets/images/course-data.jpg"
+                        class="card-img-top d-none d-sm-table-cell" alt="..." />
+                    <div class="card-body">
+                        <p class="card-text">Data</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col col-md-4 col-lg-4">
+                <!-- fifth card goes here -->
+                <div class="card border-0 text-center justify-content-center  mx-auto my-2" style="width: 18rem;">
+                    <img src="./capstone_colmar_assets/images/course-business.jpg"
+                        class="card-img-top d-none d-sm-table-cell" alt="..." />
+                    <div class="card-body">
+                        <p class="card-text">Business</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col col-md-4 col-lg-4">
+                <!-- sixth card goes here -->
+                <div class="card border-0 text-center justify-content-center  mx-auto my-2 mb-3" style="width: 18rem;">
+                    <img src="./capstone_colmar_assets/images/course-marketing.jpg"
+                        class="card-img-to d-none d-sm-table-cell" alt="..." />
+                    <div class="card-body">
+                        <p class="card-text">Marketing</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 
 </body>
 <footer class="py-3 my-4">
