--- a/index.html
+++ b/index.html
@@ -14,20 +14,15 @@
 </head>
 
 <body>
+    <!-- Navbar -->
     <div class="row">
         <div class="col">
-            <!-- Navbar -->
             <nav class="navbar navbar-expand-lg bg-body-tertiary w-100 ">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="#"><img src="./capstone_colmar_assets/images/ic-logo.svg">
+                        <span class="text-dark fw-bold">COLMAR ACADEMY</span>
                     </a>
-                    <p class="text-dark fw-bold">COLMAR ACADEMY</p>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
-                        aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarNavAltMarkup">
+                    <div class="collapse navbar-collapse d-flex justify-content-end">
                         <div class="navbar-nav p-1">
                             <a class="nav-link " aria-current="page" href="#">On campus</a>
                             <a class="nav-link" href="#">Online</a>
