--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
     </div>
     <!-- p2 -->
     <div class="row">
-        <div class="card p-3 mb-3 col-md-7 d-none d-sm-table-cell">
-            <img src="./capstone_colmar_assets/images/information-main.jpg" class="card-img-to w-100">
+        <div class="card border border-0 p-3 mb-3 col-md-7 d-none d-sm-table-cell">
+            <img src="./capstone_colmar_assets/images/information-main.jpg" class="card-img-top w-100">
             <div class="card-body">
                 <h1 class="card-title fw-bold">It doesn't hurt to keep practicing</h1>
                 <p class="card-text">"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo
@@ -173,6 +173,48 @@
                 </div>
             </div>
         </div>
+    </div>
+
+    <!-- p4 -->
+    <div class="row">
+        <div class="card border border-0 p-3 mb-3 col-md-7">
+            <video src="./capstone_colmar_assets/videos/thesis.mp4" autoplay class="object-fit-contain w-100"></video>
+            <div class="card-body">
+                <h2 class="card-title fw-bold">Reimagine urban</h2>
+                <p class="card-text">"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo
+                    lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget
+                    magna laoreet, efficitur dolor consequat, tristique ligula."</p>
+            </div>
+        </div>
+        <div class="card  border border-0 p-3 mb-3" style="max-width: 540px;">
+            <div class="row g-0">
+                <div class="col-md-4 mb-3">
+                    <img src="./capstone_colmar_assets/images/thesis-fisma.jpg" alt="Trendy Pants and Shoes"
+                        class="img-fluid rounded-start" />
+                </div>
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <h5 class="card-title">Fisma: Design and Prototype</h5>
+                        <p class="card-text">
+                            Designer showcase of new prototype product
+                        </p>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-3">
+                    <img src="./capstone_colmar_assets/images/thesis-now-and-then.jpg" alt="Trendy Pants and Shoes"
+                        class="img-fluid rounded-start" />
+                </div>
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <h5 class="card-title">Now and then</h5>
+                        <p class="card-text">
+                            Research study about New York
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </div>
 
 
