--- a/index.html
+++ b/index.html
@@ -61,41 +61,44 @@
                 <p class="card-text"><small class="text-muted">Emanuel, Sr Strategist at Hiring.com</small></p>
             </div>
         </div>
-        <!-- 3picture flex -->
-        <div class=" card d-flex flex-column col-md-5 mb-3 p-4">
-            <div class="col-md-2">
-                <img src="./capstone_colmar_assets/images/information-orientation.jpg" class="img-fluid rounded-start"
-                    alt="...">
-            </div>
-            <div class="col-md-3">
-                <div class="card-body text-center">
-                    <h5 class="card-title">Orientaion date</h5>
-                    <p class="card-text">Tue 10/11 & Wed 10/12: 8am-3pm</p>
-                    <p class="card-text"><a href="#" class="text-decoration-none">Read more</a></p>
+        <!-- 3picture -->
+        <div class="card  border border-0 p-3 mb-3" style="max-width: 540px;">
+            <div class="row g-0">
+                <div class="col-md-4 mb-3">
+                    <img src="./capstone_colmar_assets/images/information-orientation.jpg"
+                        class="img-fluid rounded-start" alt="...">
+                </div>
+                <div class="col-md-8">
+                    <div class="card-body text-center">
+                        <h5 class="card-title">Orientaion date</h5>
+                        <p class="card-text">Tue 10/11 & Wed 10/12: 8am-3pm</p>
+                        <p class="card-text"><a href="#" class="text-decoration-none">Read more</a></p>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-3">
+                    <img src="./capstone_colmar_assets/images/information-campus.jpg" class="img-fluid rounded-start"
+                        alt="...">
+                </div>
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <h5 class="card-title">Our campus</h5>
+                        <p class="card-text">Find which campus is close by you</p>
+                        <p class="card-text"><a href="#" class="text-decoration-none">Read more</a></p>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-3">
+                    <img src="./capstone_colmar_assets/images/information-guest-lecture.jpg"
+                        class="img-fluid rounded-start" alt="...">
+                </div>
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <h5 class="card-title">Our guest lecture</h5>
+                        <p class="card-text">Jion a keynote with Oliver Sack about music in meddical treatment</p>
+                        <p class="card-text"><a href="#" class="text-decoration-none">Read more</a></p>
+                    </div>
                 </div>
             </div>
-            <div class="col-md-2">
-                <img src="./capstone_colmar_assets/images/information-campus.jpg" class="img-fluid rounded-start"
-                    alt="...">
-            </div>
-            <div class="col-md-3">
-                <div class="card-body">
-                    <h5 class="card-title">Our campus</h5>
-                    <p class="card-text">Find which campus is close by you</p>
-                    <p class="card-text"><a href="#" class="text-decoration-none">Read more</a></p>
-                </div>
-            </div>
-            <div class="col-md-2">
-                <img src="./capstone_colmar_assets/images/information-guest-lecture.jpg" class="img-fluid rounded-start"
-                    alt="...">
-            </div>
-            <div class="col-md-3">
-                <div class="card-body">
-                    <h5 class="card-title">Our guest lecture</h5>
-                    <p class="card-text">Jion a keynote with Oliver Sack about music in meddical treatment</p>
-                    <p class="card-text"><a href="#" class="text-decoration-none">Read more</a></p>
-                </div>
-            </div>
+
         </div>
     </div>
     <!-- p3 -->
@@ -179,14 +182,14 @@
     <div class="row">
         <div class="card border border-0 p-3 mb-3 col-md-7">
             <video src="./capstone_colmar_assets/videos/thesis.mp4" autoplay class="object-fit-contain w-100"></video>
-            <div class="card-body">
+            <div class="card-body d-none d-sm-table-cell">
                 <h2 class="card-title fw-bold">Reimagine urban</h2>
                 <p class="card-text">"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo
                     lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget
                     magna laoreet, efficitur dolor consequat, tristique ligula."</p>
             </div>
         </div>
-        <div class="card  border border-0 p-3 mb-3" style="max-width: 540px;">
+        <div class="card  border border-0 p-3 mb-3 d-none d-sm-table-cell" style="max-width: 540px;">
             <div class="row g-0">
                 <div class="col-md-4 mb-3">
                     <img src="./capstone_colmar_assets/images/thesis-fisma.jpg" alt="Trendy Pants and Shoes"
