--- a/index.html
+++ b/index.html
@@ -181,7 +181,9 @@
     <!-- p4 -->
     <div class="row">
         <div class="card border border-0 p-3 mb-3 col-md-7">
-            <video src="./capstone_colmar_assets/videos/thesis.mp4" autoplay class="object-fit-contain w-100"></video>
+            <video class="object-fit-contain w-100" controls>
+                <source src="./capstone_colmar_assets/videos/thesis.mp4" type="video/mp4">
+            </video>
             <div class="card-body d-none d-sm-table-cell">
                 <h2 class="card-title fw-bold">Reimagine urban</h2>
                 <p class="card-text">"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo
