--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <a class="navbar-brand" href="#"><img src="./capstone_colmar_assets/images/ic-logo.svg">
                         <span class="text-dark fw-bold">COLMAR ACADEMY</span>
                     </a>
-                    <div class="collapse navbar-collapse d-flex justify-content-end">
+                    <div class="collapse navbar-collapse">
                         <div class="navbar-nav p-1">
                             <a class="nav-link " aria-current="page" href="#">On campus</a>
                             <a class="nav-link" href="#">Online</a>
@@ -62,7 +62,7 @@
             </div>
         </div>
         <!-- 3picture -->
-        <div class="card  border border-0 p-3 mb-3" style="max-width: 540px;">
+        <div class="card border border-1 p-3 mb-3" style="max-width: 540px;">
             <div class="row g-0">
                 <div class="col-md-4 mb-3">
                     <img src="./capstone_colmar_assets/images/information-orientation.jpg"
@@ -221,11 +221,17 @@
         </div>
 
     </div>
-
-
+    <hr>
+    <footer class="mb-3">
+        <p class="copyright">© 2016 Colmar Academy. All rights reserved</p>
+        <span class="terms">
+            <ul>
+                <li>Terms</li>
+                <li>Privacy</li>
+            </ul>
+        </span>
+    </footer>
 </body>
-<footer class="py-3 my-4">
-    <p class="text-center text-muted">© 2016 Colmar Academy. All rights reseed</p>
-</footer>
+
 
 </html>
