--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <!-- Navbar -->
     <div class="row">
-        <div class="col">
+        <div class="col-md-12 col-sm-12">
             <nav class="navbar navbar-expand-lg bg-body-tertiary w-100">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="#"><img src="./capstone_colmar_assets/images/ic-logo.svg">
@@ -41,11 +41,11 @@
                 <img src="./capstone_colmar_assets/images/banner.jpg" class="img-fluid rounded-start" alt="...">
             </div>
             <div class="col-md-5">
-                <div class="learncard card-body ">
+                <div class="learncard card-body">
                     <h5 class="card-title fs-1">Lean something new everday</h5>
                     <p class="card-text fs-4">Lorme ipsum dolor sit amet, consectetur adipiscing elit.</p>
                     <div class="card-text text-center">
-                        <div class="button p-3 mb-2 bg-secondary w-25 justify-content-center"><a href="#"
+                        <div class="button p-3 mb-2 bg-secondary w-50 mx-auto"><a href="#"
                                 class="text-decoration-none text-white">Start Here</a>
                         </div>
                     </div>
